--- a/.env
+++ b/.env
@@ -1,6 +1,12 @@
-IMAGE=nginx-php:v1
+# nginx & php
+NGINX_IMAGE=nginx-php:v1
 CONTAINER_NAME=nginx-php
-PORT=8888
+NGINX_PORT=8888
 NGINX_CONF_DIR=/root/lnmp/nginx/conf
 PHP_ETC_DIR=/root/lnmp/php/etc
 WEB_HOME_DIR=/root/lnmp/wwwroot
+
+# redis
+REDIS_IMAGE=redis:4.0.2
+REDIS_PORT=6379
+
