--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     user: root
     depends_on:
       - redis
-    container_name: ${CONTAINER_NAME}
+    container_name: nginx-php
     ports:
       - ${NGINX_PORT}:80
     volumes:
@@ -18,6 +18,7 @@ services:
   redis:
     image: ${REDIS_IMAGE}
     user: root
+    container_name: redis
     ports:
       - ${REDIS_PORT}:6379
     restart: unless-stopped
