--- a/.env
+++ b/.env
@@ -9,3 +9,7 @@ WEB_HOME_DIR=/root/lnmp/wwwroot
 REDIS_IMAGE=redis:4.0.2
 REDIS_PORT=6379
 
+# mysql
+MYSQL_IMAGE=mysql:5.6.47
+MYSQL_PORT=3306
+MYSQL_ROOT_PASSWORD=123456
