--- a/.env
+++ b/.env
@@ -6,8 +6,10 @@ PHP_ETC_DIR=/root/lnmp/php/etc
 WEB_HOME_DIR=/root/lnmp/wwwroot
 
 # redis
-REDIS_IMAGE=redis:4.0.2
+REDIS_IMAGE=redis:v1
 REDIS_PORT=6379
+REDIS_CONF_FILE=/root/lnmp/redis/redis.conf
+REDIS_DATA_DIR=/root/lnmp/redis/data
 
 # mysql
 MYSQL_IMAGE=mysql:5.6.47
