--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   nginx:
-    build: ./nginx/Dockerfile
+    build: ./nginx
     image: ${NGINX_IMAGE}
     user: root
     depends_on:
@@ -17,7 +17,7 @@ services:
     restart: unless-stopped
 
   redis:
-    build: ./redis/Dockerfile
+    build: ./redis
     image: ${REDIS_IMAGE}
     user: root
     container_name: redis
