--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     ports:
       - ${REDIS_PORT}:6379
     volumes:
-      - ${NGINX_CONF_DIR}:/usr/local/nginx/conf
+      - ${REDIS_CONF_FILE}:/usr/local/etc/redis.conf
       - ${REDIS_DATA_DIR}:/data
     restart: unless-stopped
 
