--- a/redis/redis.conf
+++ b/redis/redis.conf
@@ -6,9 +6,9 @@ timeout 0
 tcp-keepalive 300
 daemonize no
 supervised no
-pidfile /var/run/redis.pid
+pidfile /data/redis.pid
 loglevel notice
-logfile /var/run/redis.log
+logfile /data/redis.log
 databases 16
 always-show-logo yes
 save 900 1
