--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,7 @@ services:
     ports:
       - ${MYSQL_PORT}:3306
     volumes:
-      - ${REDIS_CONF_FILE}:/etc/mysql/conf.d/mysql.cnf
+      - ${REDIS_CONF_FILE}:/etc/mysql/my.cnf
       - ${MYSQL_DATA_DIR}:/var/lib/mysql
     restart: unless-stopped
     environment:
