--- a/mysql/my.cnf
+++ b/mysql/my.cnf
@@ -43,3 +43,6 @@ key_buffer_size = 512M
 sort_buffer_size = 8M
 read_buffer = 2M
 write_buffer = 2M
+
+!includedir /etc/mysql/conf.d/
+!includedir /etc/mysql/mysql.conf.d/
