--- a/.env
+++ b/.env
@@ -17,3 +17,4 @@ MYSQL_PORT=3306
 MYSQL_ROOT_PASSWORD=123456
 MYSQL_CONF_FILE=/root/lnmp/mysql/my.cnf
 MYSQL_DATA_DIR=/root/lnmp/mysql/data
+test=aaa
