--- a/.env
+++ b/.env
@@ -2,20 +2,19 @@ HOME_DIR=lnmp
 # nginx & php
 NGINX_IMAGE=nginx-php:v1
 NGINX_PORT=8888
-NGINX_CONF_DIR=/root/lnmp/nginx/conf
-PHP_ETC_DIR=/root/lnmp/php/etc
-WEB_HOME_DIR=/root/lnmp/wwwroot
+NGINX_CONF_DIR=/nginx/conf
+PHP_ETC_DIR=/php/etc
+WEB_HOME_DIR=/wwwroot
 
 # redis
 REDIS_IMAGE=redis:v1
 REDIS_PORT=6379
-REDIS_CONF_FILE=/root/lnmp/redis/redis.conf
-REDIS_DATA_DIR=/root/lnmp/redis/data
+REDIS_CONF_FILE=/redis/redis.conf
+REDIS_DATA_DIR=/redis/data
 
 # mysql
 MYSQL_IMAGE=mysql:5.6.47
 MYSQL_PORT=3306
 MYSQL_ROOT_PASSWORD=123456
-MYSQL_CONF_FILE=/root/lnmp/mysql/my.cnf
-MYSQL_DATA_DIR=/root/lnmp/mysql/data
-test=aaa
+MYSQL_CONF_FILE=/mysql/my.cnf
+MYSQL_DATA_DIR=/mysql/data
